<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/settings_ringtone"
        android:layout_width="match_parent"
        android:layout_height="68dip"
        android:layout_marginTop="12dp"
        android:orientation="vertical">

        <TextView
            style="?android:attr/settingsActivity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center|left"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/alert"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/settings_ringtone_summary"
            style="?android:attr/settingsActivity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="Super Mario" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="?android:attr/dividerHorizontal" />

    <TextView
        style="?android:attr/settingsActivity"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="16dp"
        android:text="@string/alarm_volume_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            app:tint="?android:attr/textColorPrimary"
            android:src="@android:drawable/ic_lock_idle_alarm" />

        <SeekBar
            android:id="@+id/seekbar_dialog_seekbar_master_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dip" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="16dp"
        android:textColor="?android:attr/textColorPrimary"
        android:text="@string/alarm_prealarm" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            app:tint="?android:attr/textColorPrimary"
            android:src="@android:drawable/ic_lock_idle_alarm" />

        <SeekBar
            android:id="@+id/seekbar_dialog_seekbar_prealarm_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dip" />
    </LinearLayout>
</LinearLayout>